# magsim

./: .gitignore  AnimateProfile.ipynb  CMakeLists.txt  PlotMagT.ipynb  PlotProfile.ipynb  ShowEHistory.ipynb  ShowLattice.ipynb  animate_profile.py  config.in  exchange.in  exchange_turek.in  scratch
CoRuCo/: animate_profile.py  average_profile.py  config.in  plot_widths.py  run_magsim.sh
CoRuCo/Ru1_in/: config.in.tpl  sym.mat
CoRuCo/Ru2_in/: config.in.tpl
CoRuCo/Ru3_in/: config.in.tpl
CoRuCo_sergiu/: Main.ipynb
CoRuCo_sergiu/Co_n-Ru_1/AFM/10/: CONTCAR-0.98  CONTCAR-0.99  CONTCAR-1.00  CONTCAR-1.01  CONTCAR-1.02  EOS  ene_vs_vol  latt_vs_vol  mag_mom_vs_vol  mag_vs_vol  pres_vs_vol
CoRuCo_sergiu/Co_n-Ru_1/AFM/11/: CONTCAR-0.98  CONTCAR-0.99  CONTCAR-1.00  CONTCAR-1.01  CONTCAR-1.02  EOS  ene_vs_vol  latt_vs_vol  mag_mom_vs_vol  mag_vs_vol  pres_vs_vol
CoRuCo_sergiu/Co_n-Ru_1/AFM/12/: CONTCAR-0.98  CONTCAR-0.99  CONTCAR-1.00  CONTCAR-1.01  CONTCAR-1.02  EOS  ene_vs_vol  latt_vs_vol  mag_mom_vs_vol  mag_vs_vol  pres_vs_vol
CoRuCo_sergiu/Co_n-Ru_1/AFM/13/: CONTCAR-0.98  CONTCAR-0.99  CONTCAR-1.00  CONTCAR-1.01  CONTCAR-1.02  EOS  ene_vs_vol  latt_vs_vol  mag_mom_vs_vol  mag_vs_vol  pres_vs_vol
CoRuCo_sergiu/Co_n-Ru_1/AFM/5/: CONTCAR-0.98  CONTCAR-0.99  CONTCAR-1.00  CONTCAR-1.01  CONTCAR-1.02  EOS  ene_vs_vol  latt_vs_vol  mag_mom_vs_vol  mag_vs_vol  pres_vs_vol
CoRuCo_sergiu/Co_n-Ru_1/AFM/6/: CONTCAR-0.98  CONTCAR-0.99  CONTCAR-1.00  CONTCAR-1.01  CONTCAR-1.02  EOS  ene_vs_vol  latt_vs_vol  mag_mom_vs_vol  mag_vs_vol  pres_vs_vol
CoRuCo_sergiu/Co_n-Ru_1/AFM/7/: CONTCAR-0.98  CONTCAR-0.99  CONTCAR-1.00  CONTCAR-1.01  CONTCAR-1.02  EOS  ene_vs_vol  latt_vs_vol  mag_mom_vs_vol  mag_vs_vol  pres_vs_vol
CoRuCo_sergiu/Co_n-Ru_1/AFM/8/: CONTCAR-0.98  CONTCAR-0.99  CONTCAR-1.00  CONTCAR-1.01  CONTCAR-1.02  EOS  ene_vs_vol  latt_vs_vol  mag_mom_vs_vol  mag_vs_vol  pres_vs_vol
CoRuCo_sergiu/Co_n-Ru_1/AFM/9/: CONTCAR-0.98  CONTCAR-0.99  CONTCAR-1.00  CONTCAR-1.01  CONTCAR-1.02  EOS  ene_vs_vol  latt_vs_vol  mag_mom_vs_vol  mag_vs_vol  pres_vs_vol
CoRuCo_sergiu/Co_n-Ru_1/FM/10/: CONTCAR-0.98  CONTCAR-0.99  CONTCAR-1.00  CONTCAR-1.01  CONTCAR-1.02  EOS  ene_vs_vol  latt_vs_vol  mag_mom_vs_vol  mag_vs_vol  pres_vs_vol
CoRuCo_sergiu/Co_n-Ru_1/FM/11/: CONTCAR-0.98  CONTCAR-0.99  CONTCAR-1.00  CONTCAR-1.01  CONTCAR-1.02  EOS  ene_vs_vol  latt_vs_vol  mag_mom_vs_vol  mag_vs_vol  pres_vs_vol
CoRuCo_sergiu/Co_n-Ru_1/FM/12/: CONTCAR-0.98  CONTCAR-0.99  CONTCAR-1.00  CONTCAR-1.01  CONTCAR-1.02  EOS  ene_vs_vol  latt_vs_vol  mag_mom_vs_vol  mag_vs_vol  pres_vs_vol
CoRuCo_sergiu/Co_n-Ru_1/FM/13/: CONTCAR-0.98  CONTCAR-0.99  CONTCAR-1.00  CONTCAR-1.01  CONTCAR-1.02  EOS  ene_vs_vol  latt_vs_vol  mag_mom_vs_vol  mag_vs_vol  pres_vs_vol
CoRuCo_sergiu/Co_n-Ru_1/FM/5/: CONTCAR-0.98  CONTCAR-0.99  CONTCAR-1.00  CONTCAR-1.01  CONTCAR-1.02  EOS  ene_vs_vol  latt_vs_vol  (+3 more)
Comparison/: ShowLattice.ipynb  plot_heat_bath.ipynb  plot_metropolis.ipynb
Comparison/SKtest/HeatBath/: HeatBath.o1064341  averages.SK2D_200.out  coord.SK2D_200.out  cumulants.SK2D_200.out  jfile  subjob.sh
Comparison/SKtest/Metropolis/: Metropolis.o1064342  momfile  subjob.sh
magsim/: BulkCo.cpp  BulkCoGenerator.cpp  BulkCoGenerator.h  CMakeLists.txt  Cli.cpp  CoRuCo.cpp  CoRuCoGenerator.cpp  CoRuCoGenerator.h  Config.cpp  Config.h  ConfigReader.cpp  ConfigReader.h  Constants.h  Energy.h  HeatBath.cpp  HeatBath.h  Heatbath.cpp  Heatbath.h  LatticeGenerator.cpp  LatticeGenerator.h  Makefile  Manual.cpp  MapReader.cpp  MapReader.h  Metropolis.cpp  Metropolis.h  SimpleInterface.cpp  Simulation.h  SimulationFactory.cpp  SimulationFactory.h  SpinDynamics.cpp  SpinDynamics.h  SpinLattice.cpp  SpinLattice.h  Timer.cpp  Timer.h  TupleReader.cpp  TupleReader.h  Util.cpp  Util.h  (+3 more)
magsim2/: CMakeLists.txt  Cli.cpp  Config.h  ConfigReader.cpp  Constants.h  LatticeGenerator.cpp  LatticeGenerator.h  Simulation.h  SpinDynamics.cpp  SpinDynamics.h  SpinLattice.cpp  SpinLattice.h  TupleReader.h  Util.cpp  Util.h
phase_diagram/: magsim  metropolis.conf  run.sh  run_config.sh
run_example/: config.in  exchange.in  exchange_abs.in
scripts/: animate_lattice.py  magsim  plot_lattice.py
simple_interface/: animate_profile.py  config.json
turek_exchange/: Stiffness.ipynb  hh_aa  hh_ab  readme
uppasd/Heis2D/: ShowLattice.ipynb  dmfile  inp.HeisDM2D.yaml  jfile  meminfo
uppasd/Heis2D_sym/: ShowLattice.ipynb  dmfile  inp.HeisDM2D.yaml  jfile  uppasd
uppasd/SKtest_heatbath/: dmfile  inp.SK2D_200.yaml  kfile  posfile  uppasd
uppasd/metacentrum/: ShowLattice.ipynb
uppasd/metacentrum_diagram/: ProcessResults.ipynb  magn_config.py  unpack_results.sh
uppasd/metacentrum_diagram_faulty/: ProcessResults.ipynb  magn_config.py
(+365 files in other folders)
